--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="calculator-container">
             <div id="display-container">
-                <p id="display"></p>
+                <p id="display">0</p>
             </div>
             <div class="button-rows">
                 <button class="clearAll" id="clear">AC</button>
@@ -37,7 +37,7 @@
             </div>
             <div class="button-rows">
                 <button class="digit" id="0">0</button>
-                <button id="decimal">.</button>
+                <button value="." id="decimal">.</button>
                 <button id="equals">=</button>
                 <button class="operator" id="add">+</button>
             </div>
