added listener to percent. converts to sci notation when number is small enough.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button class="clearAll" id="clear">AC</button>
                 <button id="changeSign">+/-</button>
                 <button id="percent">%</button>
-                <button class="operator" id="backspace">DEL</button>
+                <button id="backspace">DEL</button>
             </div>
             <div class="button-rows">
                 <button class="digit" id="7">7</button>
