--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
                 <p id="display">0</p>
             </div>
             <div class="button-rows">
-                <button class="clearAll" id="clear">AC</button>
-                <button id="changeSign">+/-</button>
-                <button id="percent">%</button>
-                <button id="backspace">DEL</button>
+                <button class="clearAll nonDigits" id="clear">AC</button>
+                <button class="nonDigits" id="changeSign">+/-</button>
+                <button class="nonDigits" id="percent">%</button>
+                <button class="nonDigits" id="backspace">DEL</button>
             </div>
             <div class="button-rows">
                 <button class="digit" id="7">7</button>
                 <button class="digit" id="8">8</button>
                 <button class="digit" id="9">9</button>
-                <button class="operator" id="divide">/</button>
+                <button class="operator nonDigits" id="divide">/</button>
             </div>
             <div class="button-rows">
                 <button class="digit" id="4">4</button>
                 <button class="digit" id="5">5</button>
                 <button class="digit" id="6">6</button>
-                <button class="operator" id="multiply">x</button>
+                <button class="operator nonDigits" id="multiply">x</button>
             </div>
             <div class="button-rows">
                 <button class="digit" id="1">1</button>
                 <button class="digit" id="2">2</button>
                 <button class="digit" id="3">3</button>
-                <button class="operator" id="subtract">-</button>
+                <button class="operator nonDigits" id="subtract">-</button>
             </div>
             <div class="button-rows">
                 <button class="digit" id="0">0</button>
-                <button value="." id="decimal">.</button>
-                <button id="equals">=</button>
-                <button class="operator" id="add">+</button>
+                <button class="nonDigits" value="." id="decimal">.</button>
+                <button class="nonDigits" id="equals">=</button>
+                <button class="operator nonDigits" id="add">+</button>
             </div>
         </div>
         <script src="script.js"></script>
